# lamochka-llm-council

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY_GUIDE.md  api.py  config.py  council.py  main.py  pyproject.toml  railway.toml  requirements.txt  search.py  security_check.py  setup.sh
examples/: prompt_examples.md  roles.json  tech_council.json
prompts/: base_royale_twist.md  controversial_test.md  roles.yaml  stages.yaml
providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter.py  xai_provider.py
schemas/: __init__.py  council.py
tests/: __init__.py  test_council.py  test_providers.py  test_search.py
